将源码都转义到dist目录下

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -32,11 +32,16 @@ h1,h2,h3,h4,h5,h6{ font-weight: normal; }
   box-shadow: 0 0 10px rgba(0,0,0,0.25);color: #3d4451;
 }
 .topNavBar-inner { padding: 0 16px; }
-.topNavBar nav { padding-top: 5px; }
-.topNavBar nav > ul { list-style: none; margin: 0; padding: 0; }
-.topNavBar nav > ul > li { float: left; margin-left: 17px; margin-right: 17px; position: relative;}
-.topNavBar nav > ul > li > a { font-size: 12px; color: inherit; font-weight: bold; border-top: 3px solid transparent; border-bottom: 3px solid transparent;
-  padding-top: 5px; padding-bottom: 5px; display: block; position: relative;}
+.topNavBar {
+  nav { padding-top: 5px;
+    ul { list-style: none; margin: 0; padding: 0; 
+      li { float: left; margin-left: 17px; margin-right: 17px; position: relative;
+        a { font-size: 12px; color: inherit; font-weight: bold; border-top: 3px solid transparent; border-bottom: 3px solid transparent;
+          padding-top: 5px; padding-bottom: 5px; display: block; position: relative;}
+      }
+    }
+  }
+}
 .topNavBar nav > ul > li.active > a::after,
 .topNavBar nav > ul > li.highlight > a::after { 
   content: '';
